# ephemeral-vc

./: .env.example  Dockerfile  Makefile  Procfile  README.md  alembic.ini  app.json  cspell.json  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 000000000000_initial_schema.py  20260131_000000_f6a7b8c9d0e1_add_message_type_to_sticky_messages.py  20260131_100000_g7b8c9d0e1f2_add_admin_users.py  20260131_110000_h8c9d0e1f2a3_add_reset_token_to_admin_users.py  20260131_120000_i9d0e1f2a3b4_add_email_change_fields.py  20260131_130000_j0e1f2a3b4c5_add_email_verified.py  20260201_000000_k1f2a3b4c5d6_add_role_panels.py  20260201_000001_l2g3h4i5j6k7_add_remove_reaction.py  6be2a413ed70_add_voice_session_members.py  a1b2c3d4e5f6_add_bump_reminders.py  a1b2c3d4e5f6_add_text_channel_id_to_voice_sessions.py  b2c3d4e5f6a7_add_is_enabled_to_bump_reminders.py  bc395b6e2991_add_is_hidden_to_voice_sessions.py  c3d4e5f6a7b8_add_role_id_to_bump_reminders.py  d4e5f6a7b8c9_add_bump_configs.py  e5f6a7b8c9d0_add_sticky_messages.py
docs/: ARCHITECTURE.md
scripts/: test-with-db.sh
src/: bot.py  config.py  constants.py  main.py
src/cogs/: admin.py  bump.py  health.py  role_panel.py  sticky.py  voice.py
src/core/: builders.py  permissions.py  validators.py
src/database/: engine.py  models.py
src/services/: db_service.py
src/ui/: control_panel.py  role_panel_view.py
src/web/: __init__.py  app.py  email_service.py  templates.py
tests/: __init__.py  conftest.py  test_bot.py  test_config.py  test_edge_cases.py  test_main.py  test_migrations.py  test_models.py
tests/cogs/: test_admin.py  test_bump.py  test_health.py  test_role_panel.py  test_sticky.py  test_voice.py
tests/core/: test_permissions.py
tests/database/: conftest.py  test_db_service.py  test_engine.py  test_initialization.py  test_integration.py  test_models.py
tests/services/: test_db_service.py
tests/ui/: test_control_panel.py  test_refresh_panel.py  test_role_panel_view.py
tests/web/: __init__.py  conftest.py  test_app.py  test_email_service.py  test_lifespan.py  test_templates.py
